# hf-s3ream

./: .gitignore  Cargo.toml  Dockerfile  README.md  release-plz.toml
.github/workflows/: ci.yml  deploy-space.yml  edge-image.yml  release-plz.yml  release.yml  wip-image.yml
scripts/: hfjob.sh.tpl  submit.sh.tpl
skills/hf-s3ream/: SKILL.md
space/: README.md  app.js  index.html  style.css
src/: bucket_client.rs  cas_uploader.rs  jobs_client.rs  main.rs  progress.rs  sync.rs
